--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     <div class="form-group" style="margin-bottom: 30px;">
                         <label>Select Model <span class="info-tooltip" title="Choose which ML model to use for prediction">?</span></label>
                         <select id="model-select" name="model" style="padding: 12px 15px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.2); border-radius: 10px; color: #fff; font-size: 1rem; width: 100%; cursor: pointer; transition: all 0.3s ease;">
-                            <!-- <option value="random_forest">Random Forest</option> -->
+                            <option value="random_forest">Random Forest</option>
                             <option value="xgboost">XGBoost</option>
                             <option value="ensemble">XGB + RF</option>
                             <!-- <option value="logistic_regression">Logistic Regression</option>
@@ -452,7 +452,7 @@
                 <div class="form-group" style="margin-bottom: 30px;">
                     <label>Select Model <span class="info-tooltip" title="Choose which ML model to use for batch predictions">?</span></label>
                     <select id="batch-model-select" name="model" style="padding: 12px 15px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.2); border-radius: 10px; color: #fff; font-size: 1rem; width: 100%; cursor: pointer; transition: all 0.3s ease;">
-                        <!-- <option value="random_forest">Random Forest</option> -->
+                        <option value="random_forest">Random Forest</option>
                         <option value="xgboost">XGBoost</option>
                         <option value="ensemble">XGB + RF</option>
                         <!-- <option value="logistic_regression">Logistic Regression</option>
